completed model definition

--- a/Convolutional_Neural_Network.ipynb
+++ b/Convolutional_Neural_Network.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Convolutional Neural Network.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7K3qV2en4nt/O1Ef13GaY"
+      "authorship_tag": "ABX9TyPb+GZLoVikU/oIRVc/Iu89"
     },
     "kernelspec": {
       "name": "python3",
@@ -210,13 +210,160 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "model = models.Sequential()\n",
+        "model.add(layers.Conv2D(32, (3,3), activation = 'relu', input_shape = (32,32,3)))\n",
+        "model.add(layers.MaxPooling2D(2,2))\n",
+        "model.add(layers.Conv2D(64, (3,3), activation='relu'))\n",
+        "model.add(layers.MaxPooling2D(2,2))\n",
+        "model.add(layers.Conv2D(64, (3,3), activation='relu'))"
       ],
       "metadata": {
         "id": "qnTFZksutqVj"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's display the architecture of the model so far:"
+      ],
+      "metadata": {
+        "id": "5iYgnFodu8gC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gsb2RctNu_jy",
+        "outputId": "1316574b-098d-477b-d9c7-70d6fd0ce056"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2D  (None, 15, 15, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 6, 6, 64)         0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_2 (Conv2D)           (None, 4, 4, 64)          36928     \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 56,320\n",
+            "Trainable params: 56,320\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Above, you can see that the output of every Conv2D and MaxPooling2D layer is a 3D tensor of shape (height, width, channels). The width and height dimensions tend to shrink as you go deeper in the network. The number of output channels for each Conv2D layer is controlled by the first argument (e.g., 32 or 64). Typically, as the width and height shrink, you can afford (computationally) to add more output channels in each Conv2D layer."
+      ],
+      "metadata": {
+        "id": "5gT8juBwvBNk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Add Dense layers on top\n",
+        "To complete the model, you will feed the last output tensor from the convolutional base (of shape (4, 4, 64)) into one or more Dense layers to perform classification. Dense layers take vectors as input (which are 1D), while the current output is a 3D tensor. First, you will flatten (or unroll) the 3D output to 1D, then add one or more Dense layers on top. CIFAR has 10 output classes, so you use a final Dense layer with 10 outputs."
+      ],
+      "metadata": {
+        "id": "eL01KwhkzY2m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(layers.Flatten())\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "model.add(layers.Dense(10))"
+      ],
+      "metadata": {
+        "id": "N2LzREDPzdNx"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here's the complete architecture of your model:"
+      ],
+      "metadata": {
+        "id": "GtKQT9Qgz8Oa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4pwq2fvrz-84",
+        "outputId": "9058fd91-ce72-444f-e50c-ab0ed4c53ed0"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2D  (None, 15, 15, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 6, 6, 64)         0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_2 (Conv2D)           (None, 4, 4, 64)          36928     \n",
+            "                                                                 \n",
+            " flatten (Flatten)           (None, 1024)              0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 64)                65600     \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 10)                650       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 122,570\n",
+            "Trainable params: 122,570\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
     }
   ]
 }
