--- a/Convolutional_Neural_Network.ipynb
+++ b/Convolutional_Neural_Network.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Convolutional Neural Network.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPb+GZLoVikU/oIRVc/Iu89"
+      "authorship_tag": "ABX9TyNUYntsyK5ipO0eHqj5B+KN"
     },
     "kernelspec": {
       "name": "python3",
@@ -364,6 +364,113 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The network summary shows that (4, 4, 64) outputs were flattened into vectors of shape (1024) before going through two Dense layers."
+      ],
+      "metadata": {
+        "id": "bkf1JRrv0WuO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "4 * 4 * 64"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3usFDhFV0cpQ",
+        "outputId": "7122f1f3-affa-44a1-e65f-2c5628f97b53"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1024"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Compile the model"
+      ],
+      "metadata": {
+        "id": "2_RhDHdH0fgG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer='adam',\n",
+        "              loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+        "              metrics='accuracy')"
+      ],
+      "metadata": {
+        "id": "SEuT1nqZ0nB7"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Train the model"
+      ],
+      "metadata": {
+        "id": "UMy6auXI1B4g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(train_images,\n",
+        "          train_labels,\n",
+        "          epochs=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7KuJWl_l1Eay",
+        "outputId": "ba1f9d67-3171-4776-f128-d09d4eebe50f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1563/1563 [==============================] - 70s 45ms/step - loss: 1.2480 - accuracy: 0.5548\n",
+            "Epoch 2/5\n",
+            "1563/1563 [==============================] - 72s 46ms/step - loss: 1.0607 - accuracy: 0.6274\n",
+            "Epoch 3/5\n",
+            " 157/1563 [==>...........................] - ETA: 1:00 - loss: 0.9920 - accuracy: 0.6551"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "DyN_hAzV1Xk9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
