final training results

--- a/Convolutional_Neural_Network.ipynb
+++ b/Convolutional_Neural_Network.ipynb
@@ -445,7 +445,7 @@
         "id": "7KuJWl_l1Eay",
         "outputId": "ba1f9d67-3171-4776-f128-d09d4eebe50f"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,8 +456,22 @@
             "Epoch 2/5\n",
             "1563/1563 [==============================] - 72s 46ms/step - loss: 1.0607 - accuracy: 0.6274\n",
             "Epoch 3/5\n",
-            " 157/1563 [==>...........................] - ETA: 1:00 - loss: 0.9920 - accuracy: 0.6551"
+            "1563/1563 [==============================] - 69s 44ms/step - loss: 0.9457 - accuracy: 0.6681\n",
+            "Epoch 4/5\n",
+            "1563/1563 [==============================] - 69s 44ms/step - loss: 0.8611 - accuracy: 0.6998\n",
+            "Epoch 5/5\n",
+            "1563/1563 [==============================] - 70s 45ms/step - loss: 0.7997 - accuracy: 0.7199\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fb5eafd9910>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
