--- a/Transfer_Learning_with_Images.ipynb
+++ b/Transfer_Learning_with_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transfer Learning with Images.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOcoGWab2R0aDGaoYDxtrQ8"
+      "authorship_tag": "ABX9TyN5rAJLf+uRqEjwLga9suzV"
     },
     "kernelspec": {
       "name": "python3",
@@ -478,6 +478,21 @@
       ],
       "metadata": {
         "id": "lo9Um1LolOxH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Important notes about BatchNormalization layer**\n",
+        "\n",
+        "Many image models contain BatchNormalization layers. That layer is a special case on every imaginable count. Here are a few things to keep in mind.\n",
+        "\n",
+        "1. BatchNormalization contains <u>2 non-trainable weights</u> that get updated during training. These are the variables tracking the <u>mean and variance</u> of the inputs.\n",
+        "2. When you set bn_layer.trainable = False, the BatchNormalization layer will run in inference mode, and will not update its mean & variance statistics. This is not the case for other layers in general, as `weight trainability & inference/training modes are two orthogonal concepts. But the two are tied in the case of the BatchNormalization layer.`\n",
+        "3. When you unfreeze a model that contains BatchNormalization layers in order to do fine-tuning, you should keep the BatchNormalization layers in inference mode by passing training=False when calling the base model. Otherwise the updates applied to the non-trainable weights will suddenly destroy what the model has learned."
+      ],
+      "metadata": {
+        "id": "NJ3eMnGYo-K2"
       }
     },
     {
@@ -1038,6 +1053,237 @@
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Build a model by chaining together the data augmentation, rescaling, base_model and feature extractor layers using the Keras Functional API. As previously mentioned, use training=False as our model contains a BatchNormalization layer."
+      ],
+      "metadata": {
+        "id": "uQyjIub_nX4e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputs = tf.keras.Input(shape=(160, 160, 3))\n",
+        "x = data_augmentation(inputs)\n",
+        "x = preprocess_input(x)\n",
+        "x = base_model(x, training=False)\n",
+        "x = global_average_layer(x)\n",
+        "x = tf.keras.layers.Dropout(0.2)(x)\n",
+        "outputs = prediction_layer(x)\n",
+        "model = tf.keras.Model(inputs, outputs)"
+      ],
+      "metadata": {
+        "id": "_1R1gv8uphYI"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Compile the model\n",
+        "Compile the model before training it. Since there are two classes, use the tf.keras.losses.BinaryCrossentropy loss with from_logits=True since the model provides a linear output."
+      ],
+      "metadata": {
+        "id": "wyKKjjd-pkrG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_learning_rate = 0.0001\n",
+        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=base_learning_rate),\n",
+        "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "YG7k3E5bps00"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6PT8zZvmpwA_",
+        "outputId": "40f21bcb-2e86-44c2-b9d6-6c76af1d0863"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_2 (InputLayer)        [(None, 160, 160, 3)]     0         \n",
+            "                                                                 \n",
+            " sequential (Sequential)     (None, 160, 160, 3)       0         \n",
+            "                                                                 \n",
+            " tf.math.truediv (TFOpLambda  (None, 160, 160, 3)      0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " tf.math.subtract (TFOpLambd  (None, 160, 160, 3)      0         \n",
+            " a)                                                              \n",
+            "                                                                 \n",
+            " mobilenetv2_1.00_160 (Funct  (None, 5, 5, 1280)       2257984   \n",
+            " ional)                                                          \n",
+            "                                                                 \n",
+            " global_average_pooling2d (G  (None, 1280)             0         \n",
+            " lobalAveragePooling2D)                                          \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 1280)              0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 1281      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 2,259,265\n",
+            "Trainable params: 1,281\n",
+            "Non-trainable params: 2,257,984\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The 2.5 million parameters in MobileNet are frozen, but there are 1.2 thousand trainable parameters in the Dense layer. These are divided between two tf.Variable objects, the weights and biases."
+      ],
+      "metadata": {
+        "id": "zYvhIfhLpyEa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(model.trainable_variables)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WgDChP_5qIgB",
+        "outputId": "6cceeb8e-a3d8-4a22-ff56-4dbc89e0d63f"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Train the model\n",
+        "After training for 10 epochs, you should see ~94% accuracy on the validation set."
+      ],
+      "metadata": {
+        "id": "GmY4-vKAqK9D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "initial_epochs = 10\n",
+        "\n",
+        "loss0, accuracy0 = model.evaluate(validation_dataset)\n",
+        "\n",
+        "print(\"initial loss: {:.2f}\".format(loss0))\n",
+        "print(\"initial accuracy: {:.2f}\".format(accuracy0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RWqaJf40qOj1",
+        "outputId": "8775c3db-de5f-4391-a116-f51dd2149a12"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "26/26 [==============================] - 13s 485ms/step - loss: 0.7635 - accuracy: 0.4938\n",
+            "initial loss: 0.76\n",
+            "initial accuracy: 0.49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So, initial setup of MobileNet + Dense layers is 49% accurate. What we wanna do is to train the combination, so that the params in the dense layers are updated and better accuracy score is achieved"
+      ],
+      "metadata": {
+        "id": "13wID1AAqqWX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(train_dataset,\n",
+        "                    epochs=initial_epochs,\n",
+        "                    validation_data=validation_dataset)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hmv0iNf8qXkF",
+        "outputId": "ae7cb875-8d3a-43c1-b263-4f7b79c970d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "63/63 [==============================] - 55s 821ms/step - loss: 0.7497 - accuracy: 0.5535 - val_loss: 0.5174 - val_accuracy: 0.7017\n",
+            "Epoch 2/10\n",
+            "63/63 [==============================] - 59s 935ms/step - loss: 0.5357 - accuracy: 0.7010 - val_loss: 0.3749 - val_accuracy: 0.8168\n",
+            "Epoch 3/10\n",
+            "63/63 [==============================] - 48s 754ms/step - loss: 0.4352 - accuracy: 0.7770 - val_loss: 0.2869 - val_accuracy: 0.8849\n",
+            "Epoch 4/10\n",
+            "63/63 [==============================] - 47s 746ms/step - loss: 0.3575 - accuracy: 0.8250 - val_loss: 0.2338 - val_accuracy: 0.9270\n",
+            "Epoch 5/10\n",
+            "29/63 [============>.................] - ETA: 19s - loss: 0.3263 - accuracy: 0.8545"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "woc6TiSdqikO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
