started model training

--- a/Transfer_Learning_with_Images.ipynb
+++ b/Transfer_Learning_with_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transfer Learning with Images.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOi+tegodnlg41Oz50ezhHi"
+      "authorship_tag": "ABX9TyOZjeZgFerj2lVJcqhS55eZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -1511,12 +1511,179 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Compile the model\n",
+        "\n",
+        "> As you are training a much larger model and want to readapt the pretrained weights, it is important to use a lower learning rate at this stage. Otherwise, your model could overfit very quickly."
+      ],
+      "metadata": {
+        "id": "eJe1zlCJWeSM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+        "              optimizer = tf.keras.optimizers.RMSprop(learning_rate=base_learning_rate/10),\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "Ybh8ekH-W4lY"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QRGkWb8GW7fb",
+        "outputId": "0f7507bb-d1ea-43c5-dcca-5c556f8ee062"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_2 (InputLayer)        [(None, 160, 160, 3)]     0         \n",
+            "                                                                 \n",
+            " sequential (Sequential)     (None, 160, 160, 3)       0         \n",
+            "                                                                 \n",
+            " tf.math.truediv (TFOpLambda  (None, 160, 160, 3)      0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " tf.math.subtract (TFOpLambd  (None, 160, 160, 3)      0         \n",
+            " a)                                                              \n",
+            "                                                                 \n",
+            " mobilenetv2_1.00_160 (Funct  (None, 5, 5, 1280)       2257984   \n",
+            " ional)                                                          \n",
+            "                                                                 \n",
+            " global_average_pooling2d (G  (None, 1280)             0         \n",
+            " lobalAveragePooling2D)                                          \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 1280)              0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 1281      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 2,259,265\n",
+            "Trainable params: 1,862,721\n",
+            "Non-trainable params: 396,544\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<u>Trainable Parameters in the base model</u> - \n",
+        "\n",
+        "=================================================================\n",
+        "Total params: 2,259,265\\\n",
+        "Trainable params: 1,281\\\n",
+        "Non-trainable params: 2,257,984\n",
+        "_________________________________________________________________\n",
+        "\n",
+        "\n",
+        "<u>Trainable Parameters in the updated model</u> - \n",
+        "\n",
+        "=================================================================\n",
+        "Total params: 2,259,265\\\n",
+        "Trainable params: 1,862,721\\\n",
+        "Non-trainable params: 396,544\n",
+        "_________________________________________________________________\n",
+        "\n",
+        "A lot more parameters to update now!"
+      ],
+      "metadata": {
+        "id": "e5tyDK7BXHuw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(model.trainable_variables)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ad0ANHQHXemw",
+        "outputId": "5a1ef5de-8f85-450b-b447-bee9bc796693"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "56"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Continue training the model\n",
+        "If you trained to convergence earlier, this step will improve your accuracy by a few percentage points."
+      ],
+      "metadata": {
+        "id": "lBD-4hsjXkes"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fine_tune_epochs = 10\n",
+        "total_epochs =  initial_epochs + fine_tune_epochs\n",
+        "\n",
+        "history_fine = model.fit(train_dataset,\n",
+        "                         epochs=total_epochs,\n",
+        "                         initial_epoch=history.epoch[-1], # <- Notice the use of starting epoch from a previous checkpoint\n",
+        "                         validation_data=validation_dataset)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "idjp7R9bXoFd",
+        "outputId": "00e54906-7fa2-450e-b3bf-856d449db0e8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 10/20\n",
+            "27/63 [===========>..................] - ETA: 59s - loss: 0.1770 - accuracy: 0.9248 "
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "eJe1zlCJWeSM"
+        "id": "zPZlIinkXtXO"
       },
       "execution_count": null,
       "outputs": []
