updated fine-tuning training results

--- a/Transfer_Learning_with_Images.ipynb
+++ b/Transfer_Learning_with_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transfer Learning with Images.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZjeZgFerj2lVJcqhS55eZ"
+      "authorship_tag": "ABX9TyM5Yk9etfUSnGH/cgQDUUT5"
     },
     "kernelspec": {
       "name": "python3",
@@ -1665,17 +1665,50 @@
         "id": "idjp7R9bXoFd",
         "outputId": "00e54906-7fa2-450e-b3bf-856d449db0e8"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 10/20\n",
-            "27/63 [===========>..................] - ETA: 59s - loss: 0.1770 - accuracy: 0.9248 "
+            "63/63 [==============================] - 111s 2s/step - loss: 0.1469 - accuracy: 0.9380 - val_loss: 0.0678 - val_accuracy: 0.9752\n",
+            "Epoch 11/20\n",
+            "63/63 [==============================] - 77s 1s/step - loss: 0.1225 - accuracy: 0.9510 - val_loss: 0.0551 - val_accuracy: 0.9765\n",
+            "Epoch 12/20\n",
+            "63/63 [==============================] - 74s 1s/step - loss: 0.1158 - accuracy: 0.9550 - val_loss: 0.0560 - val_accuracy: 0.9851\n",
+            "Epoch 13/20\n",
+            "63/63 [==============================] - 73s 1s/step - loss: 0.0877 - accuracy: 0.9665 - val_loss: 0.0613 - val_accuracy: 0.9740\n",
+            "Epoch 14/20\n",
+            "63/63 [==============================] - 72s 1s/step - loss: 0.0795 - accuracy: 0.9700 - val_loss: 0.0363 - val_accuracy: 0.9851\n",
+            "Epoch 15/20\n",
+            "63/63 [==============================] - 74s 1s/step - loss: 0.0838 - accuracy: 0.9680 - val_loss: 0.0606 - val_accuracy: 0.9839\n",
+            "Epoch 16/20\n",
+            "63/63 [==============================] - 74s 1s/step - loss: 0.0788 - accuracy: 0.9650 - val_loss: 0.0388 - val_accuracy: 0.9851\n",
+            "Epoch 17/20\n",
+            "63/63 [==============================] - 72s 1s/step - loss: 0.0636 - accuracy: 0.9750 - val_loss: 0.1063 - val_accuracy: 0.9641\n",
+            "Epoch 18/20\n",
+            "63/63 [==============================] - 74s 1s/step - loss: 0.0734 - accuracy: 0.9670 - val_loss: 0.0468 - val_accuracy: 0.9814\n",
+            "Epoch 19/20\n",
+            "63/63 [==============================] - 73s 1s/step - loss: 0.0647 - accuracy: 0.9730 - val_loss: 0.0546 - val_accuracy: 0.9777\n",
+            "Epoch 20/20\n",
+            "63/63 [==============================] - 75s 1s/step - loss: 0.0580 - accuracy: 0.9785 - val_loss: 0.0687 - val_accuracy: 0.9715\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's take a look at the learning curves of the training and validation accuracy/loss when fine-tuning the last few layers of the MobileNetV2 base model and training the classifier on top of it. The validation loss is much higher than the training loss, so you may get some overfitting.\n",
+        "\n",
+        "You may also get some overfitting as the new training set is relatively small and similar to the original MobileNetV2 datasets.\n",
+        "\n",
+        "After fine tuning the model nearly reaches 98% accuracy on the validation set."
+      ],
+      "metadata": {
+        "id": "zPZlIinkXtXO"
+      }
     },
     {
       "cell_type": "code",
@@ -1683,7 +1716,7 @@
         ""
       ],
       "metadata": {
-        "id": "zPZlIinkXtXO"
+        "id": "5nRU6U_MYWos"
       },
       "execution_count": null,
       "outputs": []
