--- a/Transfer_Learning_with_Images.ipynb
+++ b/Transfer_Learning_with_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transfer Learning with Images.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO43A5Nw7Zeo2AY7STCAb7H"
+      "authorship_tag": "ABX9TyMt6ux2zu8fj5quAyq4Dz5g"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +19,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Transfer learning and fine-tuning \n",
+        "\n",
         "In this tutorial, you will learn how to classify images of cats and dogs by using transfer learning from a pre-trained network.\n",
         "\n",
         "A pre-trained model is a saved network that was previously trained on a large dataset, typically on a large-scale image-classification task. You either use the pretrained model as is or use transfer learning to customize this model to a given task.\n",
