--- a/Transfer_Learning_with_Images.ipynb
+++ b/Transfer_Learning_with_Images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Transfer Learning with Images.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJG79AiXZmHs9LN6XCi/Oh"
+      "authorship_tag": "ABX9TyMfkgodOOvR3uCMjZwXPUIQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -1490,7 +1490,9 @@
         "\n",
         "3. Remember, to use the BatchNormalization in inference mode (i.e., set trainable=False), both during feature extraction and fine-tuning. Otherwise the updates applied to the non-trainable weights will suddenly destroy what the model has learned.\n",
         "\n",
-        "4. "
+        "4. Fine-tuning is a way to improve the model performance further when doing transfer learning. But, need to keep in mind that this should only be attempted after you have trained the top-level classifier with the pre-trained model set to non-trainable. If you add a randomly initialized classifier on top of a pre-trained model and attempt to train all layers jointly, the magnitude of the gradient updates will be too large (due to the random weights from the classifier) and your pre-trained model will forget what it has learned.\n",
+        "\n",
+        "5. Also, you should try to fine-tune a small number of top layers rather than the whole MobileNet model. In most convolutional networks, the higher up a layer is, the more specialized it is. The first few layers learn very simple and generic features that generalize to almost all types of images. As you go higher up, the features are increasingly more specific to the dataset on which the model was trained. The goal of fine-tuning is to adapt these specialized features to work with the new dataset, rather than overwrite the generic learning. Just unfreeze select layers, and re-compile the model, so that the changes take place"
       ],
       "metadata": {
         "id": "26K6-Q66d0aR"
