completed data preparation

--- a/Image_classification_from_scratch.ipynb
+++ b/Image_classification_from_scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnaCCE31dtVsV+rJL8h/Hz"
+      "authorship_tag": "ABX9TyNXqCZEXmZAoO648NKdPSAX"
     },
     "kernelspec": {
       "name": "python3",
@@ -333,10 +333,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Standardizing the data\n",
+        "Our image are already in a standard size (180x180), as they are being yielded as contiguous float32 batches by our dataset. However, their RGB channel values are in the [0, 255] range. This is not ideal for a neural network; in general you should seek to make your input values small. Here, we will standardize values to be in the [0, 1] by using a Rescaling layer at the start of our model."
+      ],
+      "metadata": {
+        "id": "qpUuwqTSMSpJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We will add layers.Rescaling(1./255)(x) layer before the start of model"
+      ],
+      "metadata": {
+        "id": "UoaKowC1Mdq4"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Configure the dataset for performance\n",
+        "Let's make sure to use buffered prefetching so we can yield data from disk without having I/O becoming blocking:\n"
+      ],
+      "metadata": {
+        "id": "1W1EuKN8Mp5X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_ds = train_ds.prefetch(buffer_size=32)\n",
+        "val_ds = val_ds.prefetch(buffer_size=32)"
+      ],
+      "metadata": {
+        "id": "4iBPuFBBMtwL"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qpUuwqTSMSpJ"
+        "id": "trsg0LeHMvHf"
       },
       "execution_count": null,
       "outputs": []
